--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   const firebaseConfig = {
     apiKey: "AIzaSyB_ALVZRrzoiCsO1PUbSDDNHClr-bjdTMA",
     authDomain: "cosmiccoin-galaxy-airdrop.firebaseapp.com",
-    databaseURL: "https://cosmiccoin-galaxy-airdrop-default-rtdb.firebaseio.com",
+    databaseURL: "gs://cosmiccoin-galaxy-airdrop.appspot.com",
     projectId: "cosmiccoin-galaxy-airdrop",
     storageBucket: "cosmiccoin-galaxy-airdrop.appspot.com",
     messagingSenderId: "544564103496",
