--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
       
     function inviteFriend() {
   const referralCode = generateReferralCode();
-  const referralLink = `http://www.appcreator24.com/app1148362-f6a0hw?ref=${referralCode}`;
+  const referralLink = `https://t.me/CosmicCoinGalaxyAirdrop_Bot?start=ar0978585297?ref=${referralCode}`;
 
   alert(`Invite a friend using this referral link: ${referralLink}`);
   
